--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,24 @@ android:
     - sys-img-armeabi-v7a-android-22
     - android-22
     - extra-android-support
- 
-# Cache for dependencies
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+  
 cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 
-# Give gradlew write permission (needed to download dependencies)
+before_script:
+  # Create and start emulator
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 before_install:
- - chmod +x gradlew
+  # Give gradlew write permission (needed to download dependencies)
+  - chmod +x gradlew
