--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,19 @@ android:
     - sys-img-armeabi-v7a-android-22
     - android-22
     - extra-android-support
+    - platform-tools
+    - tools
+
+before_install:
+  # Give gradlew write permission (needed to download dependencies)
+  - chmod +x gradlew
+
+before_script:
+  # Create and start emulator
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -19,14 +32,3 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
-
-before_script:
-  # Create and start emulator
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
-
-before_install:
-  # Give gradlew write permission (needed to download dependencies)
-  - chmod +x gradlew
