--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ before_install:
   # Give gradlew write permission (needed to download dependencies)
   - chmod +x gradlew
 
+# Emulator Management: Create, Start and Wait
 before_script:
-  # Create and start emulator
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
