--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ android:
     - extra-android-support
     - platform-tools
     - tools
+    - extra-google-m2repository
+    - extra-android-m2repository
 
 before_install:
   # Give gradlew write permission (needed to download dependencies)
@@ -18,7 +20,7 @@ before_install:
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t "android-22" --abi "armeabi-v7a"
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
