--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: android
 
-# Needs sudo to build
-sudo: required
-
 android:
   components:
     - build-tools-21.1.2
-    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-addon-google_apis-google-22
     - android-22
     - extra-android-support
     - platform-tools
@@ -21,7 +18,7 @@ before_install:
 # Emulator Management: Create, Start and Wait
 before_script:
   - android list sdk --extended --no-ui --all
-  - echo no | android create avd --force -n test -t "android-22" --abi "default/armeabi-v7a"
+  - echo no | android create avd --force -n test -t "android-22" --abi google_apis/armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
