--- a/.travis.yml
+++ b/.travis.yml
@@ -2,26 +2,29 @@ language: android
 
 android:
   components:
-    - build-tools-21.1.2
-    - sys-img-armeabi-v7a-addon-google_apis-google-22
-    - android-22
-    - extra-android-support
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
     - platform-tools
     - tools
+
+    # The BuildTools version used by your project
+    - build-tools-21.1.2
+
+    # The SDK version used to compile your project
+    - android-22
+
+    # Additional components
+    - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
+    - addon-google_apis-google-19
+    - add-on
+    - extra
+    
 
 before_install:
   # Give gradlew write permission (needed to download dependencies)
   - chmod +x gradlew
-
-# Emulator Management: Create, Start and Wait
-before_script:
-  - android list sdk --extended --no-ui --all
-  - echo no | android create avd --force -n test -t "android-22" --abi google_apis/armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
